simplifying the app features and functions, ready to figure out the MVP

--- a/DotnetFinancialTrackerApp/Components/Dialogs/EditBudgetDialog.razor
+++ b/DotnetFinancialTrackerApp/Components/Dialogs/EditBudgetDialog.razor
@@ -25,7 +25,7 @@
                                  @bind-Value="_model.Limit"
                                  Required="true"
                                  RequiredError="Budget limit is required"
-                                 Validation="ValidateLimit" />
+                                 Validation="@ValidateLimit" />
 
                 <MudDatePicker Label="Month"
                                Variant="Variant.Outlined"
@@ -40,8 +40,8 @@
 
     <DialogActions>
         <MudSpacer />
-        <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="Cancel">Cancel</MudButton>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Ok">Save</MudButton>
+        <MudButton Variant="Variant.Text" Color="Color.Secondary" Elevation="0" OnClick="@Cancel">Cancel</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Default" Elevation="0" OnClick="@Ok" Style="background-color: black; color: white;">Save</MudButton>
     </DialogActions>
 </MudDialog>
 
