--- a/DotnetFinancialTrackerApp/Components/Dialogs/EditTaskDialog.razor
+++ b/DotnetFinancialTrackerApp/Components/Dialogs/EditTaskDialog.razor
@@ -29,8 +29,8 @@
     </DialogContent>
     <DialogActions>
         <MudSpacer />
-        <MudButton Variant="Variant.Text" OnClick="Cancel">Cancel</MudButton>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Save">Save</MudButton>
+        <MudButton Variant="Variant.Text" Elevation="0" OnClick="@Cancel">Cancel</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Default" Elevation="0" OnClick="@Save" Style="background-color: black; color: white;">Save</MudButton>
     </DialogActions>
 </MudDialog>
 
