--- a/DotnetFinancialTrackerApp/Components/Dialogs/EditTransactionDialog.razor
+++ b/DotnetFinancialTrackerApp/Components/Dialogs/EditTransactionDialog.razor
@@ -33,7 +33,7 @@
                                  @bind-Value="_model.Amount"
                                  Required="true"
                                  RequiredError="Amount is required"
-                                 Validation="ValidateAmount" />
+                                 Validation="@ValidateAmount" />
 
                 <MudDatePicker Label="Date"
                                Variant="Variant.Outlined"
@@ -62,8 +62,8 @@
 
     <DialogActions>
         <MudSpacer />
-        <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="Cancel">Cancel</MudButton>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="Ok">Save</MudButton>
+        <MudButton Variant="Variant.Text" Color="Color.Secondary" Elevation="0" OnClick="@Cancel">Cancel</MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Default" Elevation="0" OnClick="@Ok" Style="background-color: black; color: white;">Save</MudButton>
     </DialogActions>
 </MudDialog>
 
