--- a/DotnetFinancialTrackerApp/Components/Routes.razor
+++ b/DotnetFinancialTrackerApp/Components/Routes.razor
@@ -8,7 +8,7 @@
                 <MudContainer Class="pa-4">
                     <MudAlert Severity="Severity.Error" Elevation="0">
                         An error occurred while loading this page.
-                        <MudButton Color="Color.Primary" Class="ms-2" Href="/">Go Home</MudButton>
+                        <MudButton Color="Color.Default" Elevation="0" Class="ms-2" Href="/" Style="background-color: black; color: white;">Go Home</MudButton>
                     </MudAlert>
                 </MudContainer>
             </ErrorContent>
@@ -20,7 +20,7 @@
             <MudContainer Class="pa-4">
                 <MudText Typo="Typo.h5">Page not found</MudText>
                 <MudText Typo="Typo.body2">The page you're looking for doesn't exist.</MudText>
-                <MudButton Class="mt-3" Href="/" Color="Color.Primary">Go Home</MudButton>
+                <MudButton Class="mt-3" Href="/" Color="Color.Default" Elevation="0" Style="background-color: black; color: white;">Go Home</MudButton>
             </MudContainer>
         </LayoutView>
     </NotFound>
